syntax = "proto3";

option go_package = "./pkg/pb";

package task;

service TaskService {
    rpc GetTaskById(TaskWithID) returns (Task) {}
    rpc GetAllTasks(Empty) returns (TasksList) {}
    rpc UpdateTask(Task) returns (Task) {}
    rpc DeleteTask(TaskWithID) returns (Empty) {}
    rpc CreateTask(Task) returns (Empty) {}
}

message Task {
    int64 id = 1;
    string description = 2;
    int64 project_id = 3;
    int64 user_id = 4;
    string status = 5;
}

message TasksList {
    repeated Task tasks = 1;
}

message TaskWithID {
    int64 id = 1;
}

message Empty {}